# Stick-Dodge

./: 1  2  3  CMakeLists.txt  README.md
include/: Game.h  Goli.h  LinkedList.h  Menu.h  MenuItem.h  Node.h  SDL  SDL_image  SDL_mixer  SDL_ttf  Stage.h  action.h  const.h  timer.h
src/: Game.cpp  Goli.cpp  LinkedList.cpp  Menu.cpp  MenuItem.cpp  Node.cpp  Stage.cpp  action.cpp  timer.cpp
templates node and linked list/: LinkedList.h  Node.cpp  Node.h  problem.txt
